--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -47,6 +47,7 @@ RUN yes | ./sdkmanager --sdk_root=${ANDROID_HOME} "cmdline-tools;latest"
 
 RUN sudo ln -s /home/$USER/Android/Sdk/platform-tools/adb /usr/local/bin/adb
 RUN sudo python3 -m pip install --upgrade pip
+Run pip install --updgrade Cython
 RUN pip3 install --user --upgrade pip setuptools
 
 #install Qt
