--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -65,7 +65,7 @@ RUN sudo ln -s /home/$USER/Tools/QtCreator/bin/qtcreator.sh /usr/local/bin/qtcre
 
 # build dependencies
 WORKDIR /home/$USER/src
-RUN git clone https://github.com/jrajason/gnuradio-android.git --branch gnuradio-3.10-android
+RUN git clone https://github.com/jrajason/gnuradio-android.git --branch gnuradio-3.10-android-dockerfile
 WORKDIR /home/$USER/src/gnuradio-android
 RUN ./init_env.sh
 RUN ./build_python_modules.sh install_deps
